--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,7 @@ body {
   transition: background-color 0.3s, color 0.3s;
   font-family: 'Poppins', sans-serif;
 }
+
+html{
+  scroll-behavior: smooth;
+}
